Downgrade java jar file output to java 11.
- Remove Preview Features (pattern matching).
- Remove use of java16 Stream.toList().
- Remove use of java record (jabel doesn't support de-sugaring).
- Enable Jabel to support recent sugared syntax back to Java 11 target.

Spot checked generated jar files to confirm java 11 bytecode (version 55).