@@ -10,6 +10,7 @@ import java.util.Optional;
 import java.util.function.Function;
 import org.apache.calcite.rex.RexCall;
 import org.apache.calcite.rex.RexNode;
+import org.apache.calcite.sql.SqlOperator;
 import org.apache.calcite.sql.fun.SqlArrayValueConstructor;
 import org.apache.calcite.sql.fun.SqlMapValueConstructor;
 
@@ -20,27 +21,26 @@ public class LiteralConstructorConverter implements CallConverter {
   @Override
   public Optional<Expression> convert(
       RexCall call, Function<RexNode, Expression> topLevelConverter) {
-    return switch (call.getOperator()) {
-      case SqlArrayValueConstructor array -> Optional.of(
+    SqlOperator operator = call.getOperator();
+    if (operator instanceof SqlArrayValueConstructor) {
+      return Optional.of(
           ExpressionCreator.list(
               false,
               call.operands.stream()
                   .map(t -> ((Expression.Literal) topLevelConverter.apply(t)))
-                  .toList()));
-
-      case SqlMapValueConstructor map -> {
-        List<Expression.Literal> literals =
-            call.operands.stream()
-                .map(t -> ((Expression.Literal) topLevelConverter.apply(t)))
-                .toList();
-        Map<Expression.Literal, Expression.Literal> items = new HashMap<>();
-        assert literals.size() % 2 == 0;
-        for (int i = 0; i < literals.size(); i += 2) {
-          items.put(literals.get(i), literals.get(i + 1));
-        }
-        yield Optional.of(ExpressionCreator.map(false, items));
+                  .collect(java.util.stream.Collectors.toList())));
+    } else if (operator instanceof SqlMapValueConstructor) {
+      List<Expression.Literal> literals =
+          call.operands.stream()
+              .map(t -> ((Expression.Literal) topLevelConverter.apply(t)))
+              .collect(java.util.stream.Collectors.toList());
+      Map<Expression.Literal, Expression.Literal> items = new HashMap<>();
+      assert literals.size() % 2 == 0;
+      for (int i = 0; i < literals.size(); i += 2) {
+        items.put(literals.get(i), literals.get(i + 1));
       }
-      default -> Optional.empty();
-    };
+      return Optional.of(ExpressionCreator.map(false, items));
+    }
+    return Optional.empty();
   }
 }
